--- a/Routes/index.html
+++ b/Routes/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+    <link rel="stylesheet" type="text/css" href="/Public/css/main.css">  
+
+<title>Green World</title>
 </head>
+<header>
+    <!--navigation bar-->
+    <ul>
+        <li><a href="/index">Home</a></li>
+        <li><a href="/products">Products</a></li>
+        <li style="float:right"><a href="/login">Sign in</a></li>
+        <li><a href="/contact">Contact us</a></li>
+        <li><a href="/profile">Profile</a></li>
+        <li><a href="/staff">Staff</a></li>
+    </ul>
+</header>
 <body>
 
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
-
 </body>
 </html>
