--- a/Routes/index.html
+++ b/Routes/index.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="/Public/css/main.css">  
+    <link rel="stylesheet" href="/css/main.css">  
 
 <title>Green World</title>
 </head>
 <header>
     <!--navigation bar-->
     <ul>
-        <li><a href="/index">Home</a></li>
+        <li><a href="/">Home</a></li>
         <li><a href="/products">Products</a></li>
         <li style="float:right"><a href="/login">Sign in</a></li>
         <li><a href="/contact">Contact us</a></li>
