--- a/Routes/login.html
+++ b/Routes/login.html
@@ -1,12 +1,16 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
 <head>
-<title>Page Title</title>
+   <link rel="stylesheet" type="text/css" href="../Public/css/main.css">
+<title>Green World Login</title>
 </head>
 <body>
-
-<h1>Login</h1>
-<p>Or signup.</p>
+    <div id="login">
+        <h1>Login</h1>
+    </div>
+    <div id="signup">
+        <p>Or signup.</p>
+    </div>
 
 </body>
 </html>
