--- a/Routes/login.html
+++ b/Routes/login.html
@@ -1,9 +1,18 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-   <link rel="stylesheet" type="text/css" href="../Public/css/main.css">
+   <link rel="stylesheet" type="text/css" href="/css/main.css">
 <title>Green World Login</title>
 </head>
+<!--navigation bar-->
+<ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/products">Products</a></li>
+        <li style="float:right"><a href="/login">Sign in</a></li>
+        <li><a href="/contact">Contact us</a></li>
+        <li><a href="/profile">Profile</a></li>
+        <li><a href="/staff">Staff</a></li>
+    </ul>
 <body>
     <div id="login">
         <h1>Login</h1>
