--- a/Routes/login.html
+++ b/Routes/login.html
@@ -37,6 +37,11 @@
                         <input type="text"/><br>
                         <label>Contact Number:</label>
                         <input type="text"/><br>
+                        <label>Password:</label>
+                        <input type="text"/><br>
+                        <label>Confirm Password:</label>
+                        <input type="text"/><br>
+
 
                         <button id="post-signup" formaction="/profile">Sign up</button>
                 </form>
