product page and css file

--- a/Routes/products.html
+++ b/Routes/products.html
@@ -20,14 +20,23 @@
 </header>
 <body>
 
-<h1>This is all the products!</h1>
-<h3>Select Category:</h3>
-
-<form action="/action_page.php">
-  <input type="checkbox" name="Straw" value="Bike"> I have a bike<br>
-  <input type="checkbox" name="Recycle Bags" value="Car"> I have a car<br>
-  <input type="checkbox" name="Bottles" value="Boat" checked> I have a boat<br><br>
-
-
+    <h1>This is all the products!</h1>
+    <hr>
+    <div></div>
+        <h3>Select Category:</h3>
+        <form action="">
+            <input type="checkbox" name="Straw" value="Straw"> Straw<br>
+            <input type="checkbox" name="Recycle Bags" value="Bags"> Bags<br>
+            <input type="checkbox" name="Bottles" value="Bottles" checked> Boottles<br><br>
+        </form>
+    </div>
+    
+    <footer>
+            <ul>
+                <li><a href=" ">Privacy Policy</a></li>
+                <li><a href=" ">Refund Policy</a></li>
+                <li><a href=" ">Contact Us</a></li>
+            </ul>
+    </footer>
 </body>
 </html>
