updated product page

--- a/Routes/products.html
+++ b/Routes/products.html
@@ -6,6 +6,7 @@
         <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
         <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
         <script src="/js/carousel.js"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Products</title>
 </head>
 <header>
@@ -22,15 +23,18 @@
 
     <h1>This is all the products!</h1>
     <hr>
-    <div></div>
+   <!--<div>
         <h3>Select Category:</h3>
         <form action="">
             <input type="checkbox" name="Straw" value="Straw"> Straw<br>
             <input type="checkbox" name="Recycle Bags" value="Bags"> Bags<br>
             <input type="checkbox" name="Bottles" value="Bottles" checked> Boottles<br><br>
         </form>
-    </div>
-    
+    </div>--> 
+    <section class="container">
+        <div class="one">left</div>
+        <div class= "two">right</div>
+    </section>
     <footer>
             <ul>
                 <li><a href=" ">Privacy Policy</a></li>
