--- a/Routes/index.html
+++ b/Routes/index.html
@@ -6,8 +6,8 @@
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
     <script src="/js/carousel.js"></script>
-
-<title>Green World</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Green World</title>
 </head>
 <header>
     <!--navigation bar-->
